<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/first_section" android:checkableBehavior="single" >
        <item
            android:id="@+id/library_item"
            android:icon="@drawable/ic_library_music_white_24dp"
            android:title="@string/library" />
        <item
            android:id="@+id/folder_item"
            android:icon="@drawable/ic_folder_white_24dp"
            android:title="@string/folder" />
    </group>

    <group android:id="@+id/second_section" android:checkableBehavior="single" >
        <item
            android:id="@+id/support_item"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/support" />
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/info_item"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/info"
            />
    </group>

</menu>

