<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--Album Art Display-->
    <RelativeLayout
        android:id="@+id/rl_album_art_display"
        android:layout_width="match_parent"
        android:layout_height="360dp">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/album_art_placeholder" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/close_panel"
            android:src="@drawable/ic_close_white_24dp" />

        <ImageView
            android:id="@+id/iv_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/more_info"
            android:src="@drawable/ic_more_vert_white_24dp" />
    </RelativeLayout>


    <!--Playback Handling Layout-->
    <LinearLayout
        android:id="@+id/ll_song_playback_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/mydivider"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorSecondaryText">

            <TextView
                android:id="@+id/tv_time_elapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="0:00"
                android:textColor="@color/colorPrimaryText" />

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/tv_time_remaining"
                android:layout_toRightOf="@id/tv_time_elapsed"
                android:progressDrawable="@android:color/transparent"
                android:thumb="@drawable/seekbar_thumb" />

            <TextView
                android:id="@+id/tv_time_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="0:00"
                android:textColor="@color/colorPrimaryText" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/playback_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_bg"
                android:clickable="true"
                android:src="@drawable/ic_repeat_white_24dp" />

            <ImageView
                android:id="@+id/iv_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/iv_repeat"
                android:background="@drawable/custom_bg"
                android:clickable="true"
                android:src="@drawable/ic_skip_previous_white_36dp" />

            <ImageView
                android:id="@+id/iv_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/custom_bg"
                android:clickable="true"
                android:src="@drawable/ic_play_arrow_white_36dp" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/iv_shuffle"
                android:background="@drawable/custom_bg"
                android:clickable="true"
                android:src="@drawable/ic_skip_next_white_36dp" />

            <ImageView
                android:id="@+id/iv_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_bg"
                android:clickable="true"
                android:src="@drawable/ic_shuffle_white_24dp" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg"
        android:clickable="true"
        android:divider="@drawable/mydivider"
        android:padding="8dp">

        <ImageView
            android:id="@+id/song_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_volume_up_black_24dp" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/song_image"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/song_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_name"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/song_image"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/song_artist"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:src="@drawable/ic_more_vert_black_24dp" />
    </RelativeLayout>

</LinearLayout>